V1.01 fixed input on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -175,6 +175,13 @@ font-size: 12px;
     font-size: 12px;
     margin: 0;
   }
+.formContainer input{
+  display: flex;
+  width: 70%;
+  margin: auto;
+}
+
+  
 }
 
 @media only screen and (min-width: 1024px) and (max-width: 1025px) {
@@ -214,6 +221,7 @@ font-size: 12px;
   .forecastContainer .desc, .temp, .date, .wind{
     font-size: 25px;
   }
+
 }
 
 @media(max-width: 360px){
@@ -229,6 +237,8 @@ font-size: 12px;
     display: flex;
     flex-direction: column;
   }
+  
+  
 }
 @media(max-height: 800px){
   .conditions{
